--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
