--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=backend
+# spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl.auto=update
+server.error.whitelabel.enabled=true
