--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=backend
+# spring.main.web-application-type=none
 # spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
