--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=backend
 # spring.main.web-application-type=none
 # spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl.auto=update
 server.error.whitelabel.enabled=true
