fix issue related to database driver

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=backend
 # spring.main.web-application-type=none
 # spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecom
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=30
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.user=zehan
+spring.datasource.password=z
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl.auto=update
 server.error.whitelabel.enabled=true
