--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -79,6 +79,13 @@
 			<version>0.11.1</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<!-- Dotenv -->
+		<dependency>
+    		<groupId>io.github.cdimascio</groupId>
+   			<artifactId>dotenv-java</artifactId>
+    		<version>2.2.0</version>
+		</dependency>
 	</dependencies>
 	
 
