--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,32 +1,15 @@
 spring.application.name=backend
-# spring.main.web-application-type=none
-# spring.datasource.url=${SPRING_DATASOURCE_URL}
 
-# local
-# spring.datasource.url=jdbc:postgresql://localhost:5432/
-# spring.datasource.user=zehan
-# spring.datasource.password=z
-
-# render
-spring.datasource.url=jdbc:postgresql://dpg-cohikiv79t8c7382jqr0-a.singapore-postgres.render.com/ecomerce_040x
-spring.datasource.user=zehan
-spring.datasource.password=NiAqDMtRqnNF8SNVTNbpDOdwNTLtIzoc
-
-# # supabase
-# spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
-# spring.datasource.user=postgres.ypkwocfbjwfyzprahjth
-# spring.datasource.password=zehanKhan@123
-        
-
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.minimumIdle=5
 spring.datasource.hikari.maximumPoolSize=30
 spring.datasource.hikari.idleTimeout=30000
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
+
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 logging.level.com.zaxxer.hikari=TRACE
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl = true
-spring.jpa.hibernate.ddl.auto=update
 server.error.whitelabel.enabled=true
